# admin-bounds

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
origin-data/: download_districts.py  merge_direct_districts.py
sql/functions/: infer_admin_semantic_relation.sql
sql/schema/: 02_thematic_admin_relations.sql
src/adminbounds/: __init__.py  _annotate.py  _diagnose.py  _gadm.py  _import.py  _upload.py  client.py  config.py  db.py
src/adminbounds/cli/: __init__.py
src/adminbounds/sql/schema/: 01_admin_units.sql
validation/: sample_queries.sql
